# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] Added new Hindi (hi) translation by Gyanendra Mishra.

o [NSE] Added a new version of http-wordpress-enum, it now enumerates
  plugins and themes of Wordpress installations. It also attempts to obtain
  version information to detect outdated plugins. [Paulino Calderon]

o [NSE] Renamed http-wordpress-enum to http-wordpress-users in favor of
  the new version of the script http-wordpress-enum which enumerates
  plugins and themes of Wordpress installations. [Paulino Calderon]

o [NSE] Added a check for Cisco ASA version disclosure, CVE-2014-3398, to
  http-enum in the 'security' category [Daniel Miller]

o Fixed a bug that caused Nmap to fail to find any network interface when a
  Prism interface is in monitor mode. The fix was to define the
  ARP_HRD_IEEE80211_PRISM header identifier in the libdnet-stripped code.
  [Brad Johnson]

o [NSE] Added http-shellshock to detect web applications vulnerable to
  Shellshock (CVE2014-6271). [Paulino Calderon]

o Added a version probe for Tor. [David Fifield]

o [Zenmap] Updated translations for German (de, Chris Leick), Italian (it, Jan
  Reister), Polish (pl, Jacek Wielemborek), and French (fr, MaZ)

o [Zenmap] New Chinese-language (zh) translation from Jie Jiang.

o [NSE] Added snmp-info to get the enterprise number and other information from
  the snmpEngineID in an SNMPv3 response packet. [Daniel Miller]

o [NSE] Add support to citrix-enum-apps-xml for reporting if Citrix
   published applications in the list are enforcing/requiring the level
   of ICA/session data encryption shown in the script result.
   [Tom Sellers]

o [NSE] Added targets-ipv6-wordlist to generate target IPv6 addresses
  from a wordlist made of hexadecimal characters.  [Raúl Fuentes]

o [NSE] Added targets-ipv6-map4to6 to generate target IPv6 addresses
  which correspond to IPv4 addresses mapped within a particular IPv6 subnet.
  [Raúl Fuentes]

o [NSE] Updated our Wordpress plugin list to improve the